// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error pops a toast 1`] = `
Object {
  "dismissable": true,
  "icon": <Icon
    attrs={
      Object {
        "width": 18,
      }
    }
    src={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": Object {
          "color": [Function],
          "size": [Function],
        },
        "render": [Function],
      }
    }
  />,
  "message": "Error Message",
  "timeout": 10000,
  "type": "error",
}
`;

exports[`render active state 1`] = `
Array [
  <div
    className="root_active"
  >
    <h1
      aria-live="polite"
      className="headerText"
    >
      <mock-FormattedMessage
        defaultMessage="Change Shipping Information"
        id="addressBook.headerText"
      />
    </h1>
    <div
      className="buttonContainer"
    >
      <button
        className="root_lowPriority"
        disabled={false}
        onClick={[MockFunction handleCancel]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          <mock-FormattedMessage
            defaultMessage="Cancel"
            id="addressBook.cancelButtonText"
          />
        </span>
      </button>
      <button
        className="root_highPriority"
        disabled={false}
        onClick={[MockFunction handleApplyAddress]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          <mock-FormattedMessage
            defaultMessage="Apply"
            id="addressBook.applyButtonText"
          />
        </span>
      </button>
    </div>
    <div
      className="content"
    >
      <AddressCard
        address={
          Object {
            "default_shipping": true,
            "id": 2,
            "name": "Bender",
          }
        }
        isSelected={false}
        onEdit={[MockFunction handleEditAddress]}
        onSelection={[MockFunction handleSelectAddress]}
      />
      <AddressCard
        address={
          Object {
            "default_shipping": false,
            "id": 1,
            "name": "Philip",
          }
        }
        isSelected={false}
        onEdit={[MockFunction handleEditAddress]}
        onSelection={[MockFunction handleSelectAddress]}
      />
      <AddressCard
        address={
          Object {
            "default_shipping": false,
            "id": 3,
            "name": "John",
          }
        }
        isSelected={true}
        onEdit={[MockFunction handleEditAddress]}
        onSelection={[MockFunction handleSelectAddress]}
      />
      <button
        className="addButton"
        disabled={false}
        onClick={[MockFunction handleAddAddress]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
              <line
                x1="12"
                x2="12"
                y1="8"
                y2="16"
              />
              <line
                x1="8"
                x2="16"
                y1="12"
                y2="12"
              />
            </svg>
          </span>
          <span
            className="addText"
          >
            <mock-FormattedMessage
              defaultMessage="Add New Address"
              id="addressBook.addNewAddresstext"
            />
          </span>
        </span>
      </button>
    </div>
  </div>,
  <require('../ShippingInformation/editModal')
    shippingData="activeAddress"
  />,
]
`;

exports[`render hidden state with disabled buttons 1`] = `
Array [
  <div
    className="root"
  >
    <h1
      aria-live="polite"
      className="headerText"
    >
      <mock-FormattedMessage
        defaultMessage="Change Shipping Information"
        id="addressBook.headerText"
      />
    </h1>
    <div
      className="buttonContainer"
    >
      <button
        className="root_lowPriority"
        disabled={true}
        onClick={[MockFunction handleCancel]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          <mock-FormattedMessage
            defaultMessage="Cancel"
            id="addressBook.cancelButtonText"
          />
        </span>
      </button>
      <button
        className="root_highPriority"
        disabled={true}
        onClick={[MockFunction handleApplyAddress]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          <mock-FormattedMessage
            defaultMessage="Apply"
            id="addressBook.applyButtonText"
          />
        </span>
      </button>
    </div>
    <div
      className="content"
    >
      <button
        className="addButton"
        disabled={false}
        onClick={[MockFunction handleAddAddress]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        <span
          className="content"
        >
          <span
            className="root"
          >
            <svg
              className="icon"
              fill="none"
              height={24}
              stroke="currentColor"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
              viewBox="0 0 24 24"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
              <line
                x1="12"
                x2="12"
                y1="8"
                y2="16"
              />
              <line
                x1="8"
                x2="16"
                y1="12"
                y2="12"
              />
            </svg>
          </span>
          <span
            className="addText"
          >
            <mock-FormattedMessage
              defaultMessage="Add New Address"
              id="addressBook.addNewAddresstext"
            />
          </span>
        </span>
      </button>
    </div>
  </div>,
  <require('../ShippingInformation/editModal') />,
]
`;
